--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>Matching Game</title>
-    <meta name="description" content="">
-    <link rel="stylesheet prefetch" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
+    <title>Rock Band Memory Game</title>
+    <meta name="Memory Game" content="Rock bands memory game">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet prefetch" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet prefetch" href="https://fonts.googleapis.com/css?family=Coda">
     <link rel="stylesheet" href="css/app.css">
 </head>
@@ -12,74 +13,83 @@
 
     <div class="container">
         <header>
-            <h1>Matching Game</h1>
+            <h1>Rock Band Memory Game</h1>
         </header>
 
         <section class="score-panel">
+          <div class="click">
+            <span class="clock-icon">
+              <i class="fa fa-clock-o"></i>
+            </span>
+            <span class="clock-value">00:00</span>
+          </div>
+
         	<ul class="stars">
         		<li><i class="fa fa-star"></i></li>
         		<li><i class="fa fa-star"></i></li>
         		<li><i class="fa fa-star"></i></li>
         	</ul>
+        	<span class="moves">0</span> Moves
 
-        	<span class="moves">3</span> Moves
-
-            <div class="restart">
-        		<i class="fa fa-repeat"></i>
-        	</div>
+          <div class="restart">
+      		  <i class="fa fa-repeat"></i>
+      	  </div>
         </section>
 
         <ul class="deck">
             <li class="card">
-                <i class="fa fa-diamond"></i>
+                <img class= "image" src="" alt="">
             </li>
             <li class="card">
-                <i class="fa fa-paper-plane-o"></i>
-            </li>
-            <li class="card match">
-                <i class="fa fa-anchor"></i>
+                <img class= "image" src="" alt="">
             </li>
             <li class="card">
-                <i class="fa fa-bolt"></i>
+                <img class= "image" src="" alt="">
             </li>
             <li class="card">
-                <i class="fa fa-cube"></i>
-            </li>
-            <li class="card match">
-                <i class="fa fa-anchor"></i>
+                <img class= "image" src="" alt="">
             </li>
             <li class="card">
-                <i class="fa fa-leaf"></i>
+                <img class= "image" src="" alt="">
             </li>
             <li class="card">
-                <i class="fa fa-bicycle"></i>
+                <img class= "image" src="" alt="">
             </li>
             <li class="card">
-                <i class="fa fa-diamond"></i>
+                <img class= "image" src="" alt="">
             </li>
             <li class="card">
-                <i class="fa fa-bomb"></i>
+                <img class= "image" src="" alt="">
             </li>
             <li class="card">
-                <i class="fa fa-leaf"></i>
+                <img class= "image" src="" alt="">
             </li>
             <li class="card">
-                <i class="fa fa-bomb"></i>
-            </li>
-            <li class="card open show">
-                <i class="fa fa-bolt"></i>
+                <img class= "image" src="" alt="">
             </li>
             <li class="card">
-                <i class="fa fa-bicycle"></i>
+                <img class= "image" src="" alt="">
             </li>
             <li class="card">
-                <i class="fa fa-paper-plane-o"></i>
+                <img class= "image" src="" alt="">
             </li>
             <li class="card">
-                <i class="fa fa-cube"></i>
+                <img class= "image" src="" alt="">
+            </li>
+            <li class="card">
+                <img class= "image" src="" alt="">
+            </li>
+            <li class="card">
+                <img class= "image" src="" alt="">
+            </li>
+            <li class="card">
+                <img class= "image" src="" alt="">
             </li>
         </ul>
     </div>
+    <footer>
+      Rock band images and ranking are from <a href="https://www.ranker.com/crowdranked-list/the-best-rock-bands-of-all-time">ranker</a>.
+    </footer>
 
     <script src="js/app.js"></script>
 </body>
