feat: Implemented all click eventListener
Implemented all the click events to cards and to reload system.
Also added the move counter and the reload functionality.

--- a/index.html
+++ b/index.html
@@ -17,23 +17,24 @@
         </header>
 
         <section class="score-panel">
-          <div class="click">
-            <span class="clock-icon">
-              <i class="fa fa-clock-o"></i>
-            </span>
-            <span class="clock-value">00:00</span>
+          <div class="restart">
+            <span class="restart-icon"><i class="fa fa-repeat"></i></span>
+            <span class="restart-text">Restart</span>
           </div>
 
-        	<ul class="stars">
+          <ul class="stars">
         		<li><i class="fa fa-star"></i></li>
         		<li><i class="fa fa-star"></i></li>
         		<li><i class="fa fa-star"></i></li>
         	</ul>
         	<span class="moves">0</span> Moves
 
-          <div class="restart">
-      		  <i class="fa fa-repeat"></i>
-      	  </div>
+          <div class="clock">
+            <span class="clock-icon">
+              <i class="fa fa-clock-o"></i>
+            </span>
+            <span class="clock-value">00:00</span>
+          </div>
         </section>
 
         <ul class="deck">
