--- a/index.html
+++ b/index.html
@@ -11,6 +11,24 @@
 </head>
 <body>
 
+  <!-- Modal Window to display Win Popup -->
+  <!-- Based on model provided from w3school available at: -->
+  <!-- https://www.w3schools.com/howto/howto_css_modals.asp -->
+  <div class="modal-container">
+    <div class="modal-header">
+      <h2>You WON!!!!</h2>
+    </div>
+    <div class="modal-body">
+      <p>Congratulations, you have found all rock GODS!</p>
+      <p>You did it in <span class="modal-clock">00:00</span> minutes and got
+        <span class="modal-stars">3 stars</span></p>
+      <p><button id="playAgain" class="modal-button">Play Again?</button></p>
+    </div>
+    <div class="modal-footer">
+      <h3>Thanks you for playing!</h3>
+    </div>
+  </div>
+
     <div class="container">
         <header>
             <h1>Rock Band Memory Game</h1>
@@ -88,6 +106,7 @@
             </li>
         </ul>
     </div>
+
     <footer>
       Rock band images and ranking are from <a href="https://www.ranker.com/crowdranked-list/the-best-rock-bands-of-all-time">ranker</a>.
     </footer>
